# lean-cds

./: .gitignore  CLAUDE.md  PLAN.md  README.md  app.py  i18n.py  lean_decorate.py  lean_vocab.py  pyproject.toml  scenarios.py
.agent/: ARCHITECTURE.md  DECISIONS.md  INDEX.md  LESSONS.md  SCRATCH.md  SESSION_PROMPT.md  memory.md  roadmap.md
.claude/: settings.json
.claude/commands/: codex-review.md  session-prompt.md  session.md
.serena/: project.yml
lean/: MedicalKnowledge.lean  ScenarioA.lean  ScenarioB.lean  ScenarioC.lean
lean/en/: MedicalKnowledge.lean  ScenarioA.lean  ScenarioB.lean
lean/ja/: MedicalKnowledge.lean  ScenarioA.lean  ScenarioB.lean  ScenarioC.lean
scripts/: check_scenarios.py  gen_navmap.sh
static/: styles.css  syntax.css  tooltips.js
templates/: _scenario_panel.html  _verification_result.html  index.html
